@@ -1,6 +1,8 @@
 devel
 -----
 
+* Fix uptime in _admin/statistics
+
 * Fixed a bug in smart graph bfs traversals that might violate path uniqueness
   requirements in rare cases.
 
